# aorta

./: .buckconfig  .gitignore  BUCK  README.md  pyproject.toml  requirements.txt  stress_test_report.md  train.py
.github/workflows/: cleanup_releases.yml  gemm-sweep-analysis.yml  nightly.yml  pre-commit.yml  rccl-warp-speed-analysis.yml  release.yml  test-packages.yml
config/: default.yaml  distributed.yaml  distributed_two_nodes.yaml  mi350_overlap_stress.yaml  nan_stress_test.yaml  profile_overlap_2gpu.yaml  profile_overlap_short.yaml  reproduce_hang.yaml  reproduce_hang_no_torch_prof.yaml  shampoo_opt.yaml  tf32_overlap_eval.yaml  weekly_ci.yaml
config/multi_node/: adam_opt_multi_node_seed42.yaml  distributed_multinode.yaml  sdpa_test_local_inputs.yaml  sdpa_test_multi_node.yaml  sdpa_test_via_train.yaml  shampoo_opt_multi_node.yaml  shampoo_opt_multi_node_seed42.yaml  shampoo_opt_multi_node_seed42_native_tf32.yaml  shampoo_opt_multi_node_seed42_tf32x1.yaml  shampoo_opt_multi_node_seed42_tf32x3.yaml
config/race/: customer_env_vars.yaml  env_vars.yaml  env_vars_reference.yaml  eval_exp_a_dlrmv3.yaml  eval_exp_a_ig3_rec_proxy.yaml  eval_exp_a_mitigated.yaml  eval_exp_a_reproduce.yaml  eval_exp_b_control.yaml  eval_exp_b_reproduce.yaml  eval_exp_cca_calibrated.yaml  eval_exp_cca_calibrated_compile.yaml  minimal_reproducer.yaml
config/single_node/: gemm_overlap_comm.yaml
data/sdpa_inputs/: input_logsumexp.pt  input_philox_seed.pt  metadata.json
docker/: .env.example  .env.nan-repro-asan  .env.nan-repro-hipblaslt-develop-asan  Dockerfile.nan-repro-asan  Dockerfile.private-base-shampoo-only  Dockerfile.private-meta19-torch2.12-shampoo  Dockerfile.private-rocm7021-torch2.11-shampoo  Dockerfile.public-rocm72-torch-source-shampoo  Dockerfile.public-rocm72-torch2.12-source-shampoo  Dockerfile.rocm-ubuntu-ebpf  Dockerfile.rocm70_2-ubuntu-nan  Dockerfile.rocm70_2-ubuntu-pytorch  Dockerfile.rocm70_9-1  Dockerfile.rocm70_9-1-shampoo  Dockerfile.rocm72-wheel-shampoo  Dockerfile.therock-host-asan-pytorch  Dockerfile.ubuntu-meta19-source-build  README.md  THEROCK_ASAN_BUILD_ISSUES.md  asan-entrypoint.sh  build_hipblaslt.sh  build_pytorch_wheel.sh  docker-compose.build.yaml  docker-compose.private-base-nightly.yaml  docker-compose.private-meta19-torch2.12-shampoo.yaml  docker-compose.private-rocm7021-torch2.11-shampoo.yaml  docker-compose.public-rocm72-base.yaml  docker-compose.public-rocm72-torch2.12-shampoo.yaml  docker-compose.rccl.yaml  docker-compose.rocm70_2-1-shampoo.yaml  docker-compose.rocm70_9-1-shampoo.yaml  docker-compose.rocm70_9-1.yaml  setup-env.sh
docker/rccl_test/: Dockerfile.rocm70_9-1  docker-compose.rocm70_9-1.yaml
docs/: QUICK_RUN_GUIDE.md  buck2.md  configuration.md  ebpf-integration.md  ebpf-usage-guide.md  env-probe.md  getting-started.md  hw-queue-eval.md  llm-determinism.md  magpie-integration.md  precision_testing.md  profiling.md  rccl-warp-speed-standalone.md  releasing.md  running-benchmark.md  sdpa-testing.md
docs/agent/: agentic-testing-guide.md  aorta-probe-agent.md
docs/design/: race-transformer-compute-support.md
docs/plans/: aorta-probe-188-rubric.md  mirage-aorta-integration.md
docs/probe-188/: bundle.md  classifier.md  handout-templates.md  redaction.md  sandbox.md  usage.md
examples/: mitigations-sidecar.json  probe-flag-sidecar.json
recipes/: README-ainic-sdc.md  README-running-recipes.md  README.md  ainic-gdr-flush-sdc-quick.yaml  ainic-gdr-flush-sdc.yaml  ainic-sdc-stress-reproducer.yaml  ainic-smoke.yaml  example-fsdp-smoke.yaml  example-inference-continuous-smoke.yaml  example-inference-smoke.yaml  example-llm-determinism.yaml  example-probe-smoke.yaml  example-training-ddp-smoke.yaml  example-training-fsdp-smoke.yaml  gpu-smoke-emulated.yaml  probe-flag-sweep.yaml  probe-template-bash.yaml  probe-template-buck2.yaml  probe-template-torchrun.yaml
scripts/: analyze_trace.py  bump_version.py  compare_precision_runs.py  debug_hang.sh  diagnose_crash.py  dlrmv3_synthetic_data.py  ebpf-entrypoint.sh  hip_event_cross_stream.py  hip_kernarg_race_mini.py  hip_kernarg_race_raw.py  inject_corruption_nan.py  launch_cuda.sh  launch_multinode.sh  launch_rocm.sh  meta_nan_hip_event_race.py  meta_nan_hip_event_stress.py  meta_nan_hip_stress.py  meta_nan_issue_a.py  meta_nan_issue_a_torchrec.py  meta_nan_issue_b.py  meta_nan_issue_b_vultr.py  meta_nan_rccl_cca_race.py  meta_nan_silent_corruption.py  meta_nan_torchrec_pipeline.py  meta_nan_torchrec_sim.py  nan_stress_test.py  optuna_sweep.py  pipeline_cca_race.py  rccl_fence_stress.py  rccl_nan_inject.py  rccl_stream_race_mini.py  reproduce_hang.sh  reproduce_hang_with_rocprof.sh  reproduce_shampoo_nan.py  rocprof_capture.sh  run_precision_test.sh  run_sdpa_distributed_test.py  run_with_hang_detection.sh  shampoo_race_minimal.py  shampoo_stream_race_inject.py  (+6 more)
scripts/gemm_analysis/: run_tracelens_analysis.sh
scripts/multi_node/: BATCH_TRAIN_README.md  QUICK_START.txt  README.md  batch_train.sh  config_node.sh  launch_reproducer.sh  local_launch.sh  master_launch.sh  set_env_variables.sh  setup_multi_node.sh  start_docker_all_nodes.sh  tcp_nan_detection_hints.md  verify_batch_setup.sh
scripts/rocm_mem_debug/: README.md  rocm_mem_debug.py
scripts/tracelens_single_config/: run_rccl_warp_speed_comparison.sh
scripts/utils/: html_to_md.py
scripts/weekly_ci/: README.md  __init__.py  config.py  logging_setup.py  utils.py
src/aorta/: source_diff.path
tests/: test_aorta_report.py  test_bump_version.py  test_distribution_name.py  test_gpu_control.py  test_hwqueue_loader.py  test_imports.py
tests/agent/: test_cli.py  test_llm.py  test_loop.py  test_outcomes.py  test_policy.py  test_report.py  test_state.py
tests/asan_tests/: run_all_tests.sh  run_therock_sanity.sh  test_hip_asan.cpp  test_therock_asan.py  verify_asan_active.sh  verify_asan_pytorch.sh  verify_asan_therock.sh
tests/bundle/: __init__.py  conftest.py  test_cli.py  test_manifest.py  test_no_new_deps.py  test_writer.py
tests/ebpf/: test_events.py  test_parser.py  test_runner.py
toolchains/: BUCK
(+333 files in other folders)
