[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aorta"
version = "0.2.0"
description = "PyTorch compute-communication overlap debugging toolkit with GPU hardware queue evaluation"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "AMD ROCm Team"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: System :: Hardware",
]
keywords = ["gpu", "rocm", "amd", "pytorch", "cuda", "benchmark", "fsdp", "distributed-training", "hardware-queue"]

# Base dependencies (PyTorch installed separately - see requirements.txt)
dependencies = [
    "pyyaml>=6.0",
    "click>=8.0.0",  # For aorta CLI
]

[project.scripts]
aorta = "aorta.cli:main"

# Plugin discovery: workloads register here via aorta.workloads entry-point group.
# Public workloads (when they land) register here; private workloads
# register from downstream packages' pyproject.toml under the same group.
#
# ``_subprocess`` is platform-internal: it wraps an opaque user launch
# command for ``aorta probe`` (issue #188). The leading underscore both
# (a) prevents collision with user-facing workload names and (b) marks
# the entry as visibly platform-internal in ``aorta triage list-workloads``
# when that command lands. Direct ``aorta run --workload _subprocess``
# invocations fail at ``SubprocessWorkload.setup()`` because the
# reserved argv config key is only injected by ``aorta probe``.
[project.entry-points."aorta.workloads"]
_subprocess = "aorta.workloads._subprocess:SubprocessWorkload"
llm_determinism = "aorta.workloads.llm_determinism:LlmDeterminismWorkload"
race = "aorta.workloads.race:RaceWorkload"

[project.optional-dependencies]
# For analysis/visualization scripts
analysis = [
    "matplotlib>=3.7.0",
]

# For aorta-report CLI (full functionality)
report = [
    "numpy>=1.20.0",
    "pandas>=1.3.0",
    "openpyxl>=3.0.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "beautifulsoup4>=4.12.0",
]

# For hw_queue_eval subpackage
hw-queue = [
    "numpy>=1.20.0",
    "pandas>=1.3.0",
    "tabulate>=0.9.0",
]

# For hw_queue_eval profiling features
hw-queue-profiling = [
    "aorta[hw-queue]",
    "matplotlib>=3.5.0",
    "seaborn>=0.12.0",
]

# For aorta.ebpf kernel tracing module.
# The runtime requirements are the bpftrace binary and CAP_BPF/CAP_PERFMON
# (or sudo); no Python deps beyond the base.
ebpf = []

# Development dependencies
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "pytest-timeout>=2.1.0",
    "pytest-xdist>=3.3.0",
    "pre-commit>=3.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
]

# Full installation
all = [
    "aorta[analysis]",
    "aorta[report]",
    "aorta[hw-queue]",
    "aorta[hw-queue-profiling]",
    "aorta[dev]",
]

[project.urls]
Homepage = "https://github.com/ROCm/aorta"
Documentation = "https://github.com/ROCm/aorta#readme"
Repository = "https://github.com/ROCm/aorta"

[tool.setuptools.packages.find]
where = ["src"]
include = ["aorta*"]

[tool.setuptools.package-data]
aorta = ["py.typed", "ebpf/scripts/*.bt", "ebpf/scripts/PROVENANCE.md"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "gpu: marks tests that require GPU",
    "rocm: marks tests that require ROCm specifically",
    "hw_queue: marks hw_queue_eval tests",
]

[tool.black]
line-length = 100
target-version = ['py310', 'py311', 'py312']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.ruff]
line-length = 100
select = ["E", "F", "W", "I", "N", "UP", "B", "C4"]
ignore = ["E501"]
